# todo-app

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env  Dockerfile  README.md  add_task_example.py  pyproject.toml  requirements.txt  simple_test.py  test.db  test_all_features.py  test_endpoints.py  test_neon_endpoints.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tasks_table.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  tasks.py
backend/app/core/: __init__.py  auth.py  config.py
backend/app/crud/: __init__.py  task.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  task.py
backend/app/utils/: __init__.py  exceptions.py  validators.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_crud.py
frontend/: README.md  auto-push.js  drizzle.config.ts  initialize-db.js  middleware.ts  next.config.ts  package-lock.json  package.json  run-drizzle-push-auto.js  run-drizzle-push.js
frontend/drizzle/: 0000_third_norrin_radd.sql  0001_flat_jack_flag.sql  0002_ordinary_catseye.sql  0003_neat_mauler.sql  0004_married_iron_patriot.sql
frontend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
frontend/src/actions/: sign-out.ts
frontend/src/app/: page.tsx
frontend/src/components/: AuthWrapper.tsx  SignOutButton.tsx  SignupForm.tsx
frontend/src/db/: drizzle.ts  schema.ts
frontend/src/lib/: auth-client.ts  auth-middleware.ts  auth.ts  get-jwt.ts  (+1 more)
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-frontend-auth-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-backend-http-db/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo_app/: __main__.py  interactive_main.py  main.py  task_manager.py
src/todo_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+40 files in other folders)
